--- a/html/index.html
+++ b/html/index.html
@@ -4,9 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="..\css\index.css">
     <title>3750 Final Home</title>
 </head>
 <body>
-    
+    <nav>
+        <ul>
+            <h1>Kylie Lee</h1>
+
+            </div>
+            <li><a class = "menu_option" class="active" href="index.html">
+                <i class="material-icons">home</i>
+                <span>Home</span>
+                </a>
+            </li>
+            <li><a class = "menu_option" href="..\html\courses.html">
+                <i class="material-icons">search</i>
+                <span>Courses</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
+    <div class="main">
+        <img alt="profile banner" id="banner" src="../images/banner.jpg">
+        <img alt="profile icon" id="icon" src="../images/profile.jpg">
+        <div class="content">
+
+        </div>
+    </div>
 </body>
 </html>
