About Page Started

--- a/html/index.html
+++ b/html/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="..\css\index.css">
+    <link rel="stylesheet" href="..\css\home.css">
     <title>3750 Final Home</title>
 </head>
 <body>
@@ -19,9 +20,9 @@
                 <span>Home</span>
                 </a>
             </li>
-            <li><a class = "menu_option" href="..\html\courses.html">
+            <li><a class = "menu_option" href="..\html\about.html">
                 <i class="material-icons">search</i>
-                <span>Courses</span>
+                <span>About</span>
                 </a>
             </li>
         </ul>
