--- a/html/about.html
+++ b/html/about.html
@@ -33,10 +33,9 @@
             <div class="card">
                 
             </div>
+            <div class="sidebar"></div>
         </div>
-        <div class="sidebar">
-
-        </div>
+        
     </div>
 </body>
 </html>
