--- a/html/contact.html
+++ b/html/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="..\css\index.css">
     <link rel="stylesheet" href="..\css\about.css">
@@ -28,9 +29,47 @@
         <img alt="profile banner" id="banner" src="../images/banner.jpg">
         <div class="content">
             <div class="card">
-                
+                <form>
+                    <label for="fname">First Name:</label><br>
+                    <input type="text" id="fname" name="fname"><br>
+                    <label for="lname">Last Name:</label><br>
+                    <input type="text" id="lname" name="lname"><br>
+                    <label for="lname">Email:</label><br>
+                    <input type="text" id="email" name="email"><br>
+                    <label for="lname">Message:</label><br>
+                    <input type="text" id="message" name="message"><br>
+                </form>
             </div>
-            <div class="sidebar"></div>
+            <div class="sidebar">
+                <p>
+                    Email<br>
+                    <a href = "mailto: kcgalee@gmail.com">kcgalee@gmail.com</a><br>
+                </p>
+                <p>
+                    Phone<br>
+                    000-000-0000<br>
+                </p>
+                <p>
+                    LinkedIn<br>
+                    Click Here<br>
+                </p>
+                <p>
+                    GitHub<br>
+                    Click Here<br>
+                </p>
+                <p>
+                    Twitter<br>
+                    Click Here<br>
+                </p>
+                <p>
+                    Instagram<br>
+                    Click Here<br>
+                </p>
+                <p>
+                    Spotify Account<br>
+                    Click Here<br>
+                </p>
+            </div>
         </div>
         
     </div>
