--- a/html/index.html
+++ b/html/index.html
@@ -15,16 +15,13 @@
             <h1>Kylie Lee</h1>
 
             </div>
-            <li><a class = "menu_option" class="active" href="index.html">
-                <i class="material-icons">home</i>
-                <span>Home</span>
-                </a>
-            </li>
-            <li><a class = "menu_option" href="..\html\about.html">
-                <i class="material-icons">search</i>
-                <span>About</span>
-                </a>
-            </li>
+            <li><a class = "menu_option" class="active" href="index.html"> <i class="material-icons">home</i> <span>Home</span></a></li>
+            <li><a class = "menu_option" href="..\html\about.html"> <i class="material-icons">search</i> <span>About</span></a></li>
+            <li><a class = "menu_option" href="..\html\jobs.html"> <i class="material-icons">work</i> <span>Jobs</span></a></li>
+            <li><a class = "menu_option" href="..\html\projects.html"> <i class="material-icons">edit</i> <span>Projects</span></a></li>
+            <li><a class = "menu_option" href="..\html\achieve.html"> <i class="material-icons">emoji_events</i> <span>Achievements</span></a></li>
+            <li><a class = "menu_option" href="..\html\faq.html"> <i class="material-icons">help_outline</i> <span>FAQ</span></a></li>
+            <li><a class = "menu_option" href="..\html\contact.html"> <i class="material-icons">call</i> <span>Contact</span></a></li>
         </ul>
     </nav>
     <div class="main">
