--- a/html/index.html
+++ b/html/index.html
@@ -28,7 +28,10 @@
         <img alt="profile banner" id="banner" src="../images/banner.jpg">
         <img alt="profile icon" id="icon" src="../images/profile.jpg">
         <div class="content">
-
+            <div class="gif">
+                <img alt="" src="https://64.media.tumblr.com/8bf03962ec03879cdfd6a6eddf891524/6ca2d78943eb5ad9-60/s500x750/191bdb56515369e462af2659114ee050b314d7e4.gifv" style="width: 90%;"/>
+            </div>
+            <p id="quote">you know it's been a long day, i haven't seen you today. you're somewhere. i'm sure...</p>
         </div>
     </div>
     <div class="news"></div>
