--- a/html/about.html
+++ b/html/about.html
@@ -28,9 +28,28 @@
         <img alt="profile banner" id="banner" src="../images/banner.jpg">
         <div class="content">
             <div class="card">
-                
+                <h2>About</h2>
+                <p>Wayne State University B.S. in Computer Science</p>
+                <p>Graduating December 2022</p>
+                <p>Major GPA: 3.94</p>
+                <br>
+                <p>Interests: Full stack development</p>
+                <p>Technical skills: C++, Java, HTML, CSS</p>
+                <br>
+                <h2>Fun Facts</h2>
+                <p>I can sing the ABCs backwards</p>
+                <p>Favorite flower is the daffodil</p>
             </div>
-            <div class="sidebar"></div>
+            <div class="sidebar">
+                <h2>Courses</h2>
+                <ul>
+                    <li>Algorithm Design and Analysis</li>
+                    <li>Fundamental Strctures in Computer Science</li>
+                    <li>Java Programming</li>
+                    <li>Computer Architecture and Organization</li>
+                    <li>Ethics in Computer Science</li>
+                </ul>
+            </div>
         </div>
         
     </div>
