--- a/html/contact.html
+++ b/html/contact.html
@@ -34,9 +34,9 @@
                     <input type="text" id="fname" name="fname"><br>
                     <label for="lname">Last Name:</label><br>
                     <input type="text" id="lname" name="lname"><br>
-                    <label for="lname">Email:</label><br>
+                    <label for="email">Email:</label><br>
                     <input type="text" id="email" name="email"><br>
-                    <label for="lname">Message:</label><br>
+                    <label for="message">Message:</label><br>
                     <input type="text" id="message" name="message"><br>
                 </form>
             </div>
@@ -51,23 +51,23 @@
                 </p>
                 <p>
                     LinkedIn<br>
-                    Click Here<br>
+                    <a href = "https://www.linkedin.com/in/kylie-lee-8477091b5/">Click Here</a><br>
                 </p>
                 <p>
                     GitHub<br>
-                    Click Here<br>
+                    <a href = "https://github.com/kcgalee">Click Here</a><br>
                 </p>
                 <p>
                     Twitter<br>
-                    Click Here<br>
+                    <a href = "https://twitter.com/leekylieg">Click Here</a><br>
                 </p>
                 <p>
                     Instagram<br>
-                    Click Here<br>
+                    <a href = "https://www.instagram.com/kylieglee/?hl=en">Click Here</a><br>
                 </p>
                 <p>
                     Spotify Account<br>
-                    Click Here<br>
+                    <a href = "https://open.spotify.com/user/o1l4ysjbvzbm2dkfd3s1upg67">Click Here</a><br>
                 </p>
             </div>
         </div>
