--- a/html/index.html
+++ b/html/index.html
@@ -34,6 +34,15 @@
             <p id="quote">you know it's been a long day, i haven't seen you today. you're somewhere. i'm sure...</p>
         </div>
     </div>
-    <div class="news"></div>
+    <div class="news">
+        <h2>News</h2>
+        <ul>
+            <li>3/26 Twitter Internship Offer Received!</li>
+            <li>3/29 Twitter Internship Offer Accepted!</li>
+            <li>5/03 Last Day of Winter 2022 Semester</li>
+            <li>5/10 Moving to NYC!</li>
+            <li>5/23 to start Twitter Software Engineering Internship</li>
+        </ul>
+    </div>
 </body>
 </html>
