--- a/html/jobs.html
+++ b/html/jobs.html
@@ -29,21 +29,36 @@
         <img alt="profile banner" id="banner" src="../images/banner.jpg">
         <div class="content">
             <div class="card">
+                <h2>Jobs</h2>
                 <table>
                     <tr>
-                        <td>Title</td>
-                        <td rowspan="3">Description let me fill this up with a bunch of workds save my home in the jungle</td>
+                        <th>Web Development Intern</th>
+                        <td rowspan="3">Develop and improve websites using HTML, CSS, XML, JavaScript, and PHP to enhance functionality and user experience in a multi-client environment.</td>
                     </tr>
                     <tr>
-                        <td>Type</td>
+                        <th>Asset Health</th>
                     </tr>
                     <tr>
-                        <td>Time</td>
+                        <th>Aug 2021 - April 2022</th>
+                    </tr>
+                </table>
+                <table>
+                    <tr>
+                        <th>Software Engineering Intern</th>
+                        <td rowspan="3">TBD.</td>
+                    </tr>
+                    <tr>
+                        <th>Twitter</th>
+                    </tr>
+                    <tr>
+                        <th>May 2022 - Aug 2022</th>
                     </tr>
                 </table>
             </div>
             <div class="sidebar">
-               
+               <h2>Experiences</h2>
+               <h3>WSU Industry Mentorship Winter 2021</h3>
+               <p>Accepted as 1 of 9 Mentees to receive mentorship from a WSU alumni. Receive mentorship through various meetings such as getting help on resume creations. Participated in working in my mentor's development team at the Ford Motor Company.</p>
             </div>
         </div>
         
