--- a/html/achieve.html
+++ b/html/achieve.html
@@ -28,8 +28,38 @@
         <img alt="profile banner" id="banner" src="../images/banner.jpg">
         <div class="content">
             <div class="card">
+                <table>
+                    <tr>
+                        <th>SCD Hackathon 2022</th>
+                    </tr>
+                    <tr>
+                        <td>Won 2nd place with a theme of "Life At Home". My partner and I developed a platform that focused on providing online community spaces where users can listen to music together. The 2nd place prize was a 3-D printer for each of us.</td>
+                    </tr>
+                </table>
+                <table>
+                    <tr>
+                        <th>WSU CoE Hall of Fame Student Representative</th>
+                    </tr>
+                    <tr>
+                        <td>Invited to be a student rep at the WSU College of Engineering Hall of Fame to introduce honorees and inductees. Invited as a top performing student in the CoE as 1/7 invited students.</td>
+                    </tr>
+                </table>
+                <table>
+                    <tr>
+                        <th>Impulse Annual Showcase</th>
+                    </tr>
+                    <tr>
+                        <td>Organized Impulse's 1st Annual Dance Showcase that made over $500 in revenue for our club's funds.</td>
+                    </tr>
+                </table>
             </div>
             <div class="sidebar">
+                <h2>Clubs</h2>
+                <ul>
+                    <li>Society of Computer Developers</li>
+                    <li>Society of Women Engineers</li>
+                    <li>Impulse Dance</li>
+                </ul>
             </div>
         </div>
         
