--- a/html/faq.html
+++ b/html/faq.html
@@ -29,12 +29,26 @@
         <div class="content">
             <div class="column">
                 <h2>FAQ: School</h2>
+                <ol>
+                    <li>How did you choose your major? <br> I was originally a BME major but switched to CS after taking 'Programming for Engineers' and realized I wanted to be in tech</li>
+                    <li>Do you live on campus? <br> I commuted my first semester of college but lived on campus for the remainder (excluding when campus was closed due to COVID)</li>
+                </ol>
             </div>
             <div class="column">
                 <h2>FAQ: Life</h2>
+                <ol>
+                    <li>What is your family like?<br>I'm an only child of a family of immigrants! We moved from South Korea when I was 6 years old.</li>
+                    <li>What is your MBTI? <br> ENFP-A but I am very half and half between P and J</li>
+                    <li>Are you from Michigan?<br>Nope. I was born in Korea andd then lived in 3 other states before moving to MI.</li>
+                </ol>
             </div>
             <div class="column">
                 <h2>FAQ: Misc.</h2>
+                <ol>
+                    <li>Favorite Artists?<br>I am currently listening to GFriend, (g)-idle, and ive the most</li>
+                    <li>What are you currently watching?<br>Spy x Family, Home Economics, and Abbot Elementary</li>
+                    <li>Favorite Food?<br>I'd love some seafood ramen right now</li>
+                </ol>
             </div>
         </div>
         
