--- a/html/projects.html
+++ b/html/projects.html
@@ -28,8 +28,35 @@
         <img alt="profile banner" id="banner" src="../images/banner.jpg">
         <div class="content">
             <div class="card">
+                <table>
+                    <tr>
+                        <th>Artificial Intelligence IT Chatbot Website</th>
+                    </tr>
+                    <tr>
+                        <td>Collaborated on a WSU and Michigan State AI Chatbot Site as part of the front-end development team.</td>
+                    </tr>
+                </table>
+                <table>
+                    <tr>
+                        <th>Wilson Adaptive Technologies Website</th>
+                    </tr>
+                    <tr>
+                        <td>Worked in a 3 person front end development team to improve the development of a Tech Town start-up's website with a focus on user accessibility and readability. Recognized as one of top 2 teams out of 10 that was working with the start up for bringing and accomplishing goal-oriented ideas to the CEO in bi-weekly meetings</td>
+                    </tr>
+                </table>
+                <table>
+                    <tr>
+                        <th>Society of Computer Developers Website</th>
+                    </tr>
+                    <tr>
+                        <td>Lead and collaborate with peers to develop the organization website as a semester project. </td>
+                    </tr>
+                </table>
             </div>
             <div class="sidebar">
+                <h2>Ongoing</h2>
+                <h3>Vanilla JavaScript Projects</h3>
+                <p>Started self-teaching JavaScript by creating small JS projects found on freecodecamp</p>
             </div>
         </div>
         
