--- a/html/index.html
+++ b/html/index.html
@@ -31,7 +31,7 @@
             <div class="gif">
                 <img alt="" src="https://64.media.tumblr.com/8bf03962ec03879cdfd6a6eddf891524/6ca2d78943eb5ad9-60/s500x750/191bdb56515369e462af2659114ee050b314d7e4.gifv" style="width: 90%;"/>
             </div>
-            <p id="quote">you know it's been a long day, i haven't seen you today. you're somewhere. i'm sure...</p>
+            <p id="quote" style="padding:100px;">your life isn't yours if you always care what others think</p>
         </div>
     </div>
     <div class="news">
